# figma-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  example.env
src/: error.rs  lib.rs  main.rs  server.rs
src/figma/: client.rs  image_cache.rs  mod.rs  url_parser.rs
tests/: lib.rs
tests/common/: mod.rs
tests/fixtures/: test_urls.json
tests/fixtures/sample_responses/: export_images_response.json  file_response.json  project_files_response.json  team_projects_response.json  user_response.json
tests/unit/: api_client.rs  mod.rs  url_parsing.rs
