[package]
name = "figma-mcp"
version = "0.3.0"
edition = "2021"
description = "MCP server for Figma."
license = "MIT" 
authors = ["Paul van der Meijs"]
repository = "https://github.com/paulvandermeijs/gitls"
keywords = ["mcp", "mcp-server", "figma"]
categories = ["development-tools"]

[dependencies]
rmcp = { version = "0.2.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
url = "2.0"
regex = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
assert_matches = "1.5"
